@@ -24,13 +24,12 @@
 
 package net.fabricmc.loom.task;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -38,9 +37,7 @@ import java.util.stream.Collectors;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
+import org.apache.commons.io.FileUtils;
 import org.apache.tools.ant.taskdefs.condition.Os;
 import org.gradle.api.Project;
 import org.gradle.api.tasks.TaskAction;
@@ -50,104 +47,78 @@ import net.fabricmc.loom.LoomGradlePlugin;
 import net.fabricmc.loom.configuration.ide.RunConfig;
 import net.fabricmc.loom.configuration.ide.RunConfigSettings;
 
-// Recommended vscode plugin pack:
+// Recommended vscode plugins:
+// https://marketplace.visualstudio.com/items?itemName=redhat.java
+// https://marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-debug
 // https://marketplace.visualstudio.com/items?itemName=vscjava.vscode-java-pack
 public class GenVsCodeProjectTask extends AbstractLoomTask {
 	@TaskAction
-	public void genRuns() throws IOException {
+	public void genRuns() {
 		clean(getProject());
 		generate(getProject());
 	}
 
-	public static void clean(Project project) throws IOException {
-		Path projectDir = project.getRootDir().toPath().resolve(".vscode");
+	public static void clean(Project project) {
+		File projectDir = project.getRootProject().file(".vscode");
 
-		if (Files.notExists(projectDir)) {
-			Files.createDirectories(projectDir);
+		if (!projectDir.exists()) {
+			projectDir.mkdir();
 		}
 
-		final Path launchJson = projectDir.resolve("launch.json");
-		Files.deleteIfExists(launchJson);
+		File launchJson = new File(projectDir, "launch.json");
+
+		if (launchJson.exists()) {
+			launchJson.delete();
+		}
 	}
 
-	public static void generate(Project project) throws IOException {
+	public static void generate(Project project) {
 		LoomGradleExtension extension = LoomGradleExtension.get(project);
-		Path projectDir = project.getRootDir().toPath().resolve(".vscode");
+		File projectDir = project.getRootProject().file(".vscode");
 
-		if (Files.notExists(projectDir)) {
-			Files.createDirectories(projectDir);
+		if (!projectDir.exists()) {
+			projectDir.mkdir();
 		}
 
-		final Path launchJson = projectDir.resolve("launch.json");
-		final Path tasksJson = projectDir.resolve("tasks.json");
-		final JsonObject root;
-
-		if (Files.exists(launchJson)) {
-			root = LoomGradlePlugin.GSON.fromJson(Files.readString(launchJson, StandardCharsets.UTF_8), JsonObject.class);
-		} else {
-			root = new JsonObject();
-			root.addProperty("version", "0.2.0");
-		}
-
-		final JsonArray configurations;
-
-		if (root.has("configurations")) {
-			configurations = root.getAsJsonArray("configurations");
-		} else {
-			configurations = new JsonArray();
-			root.add("configurations", configurations);
-		}
+		File launchJson = new File(projectDir, "launch.json");
+		File tasksJson = new File(projectDir, "tasks.json");
 
 		Gson gson = new GsonBuilder().setPrettyPrinting().create();
-		List<VsCodeConfiguration> configurationObjects = new ArrayList<>();
+
+		VsCodeLaunch launch;
+
+		if (launchJson.exists()) {
+			try {
+				launch = gson.fromJson(FileUtils.readFileToString(launchJson, StandardCharsets.UTF_8), VsCodeLaunch.class);
+			} catch (IOException e) {
+				throw new RuntimeException("Failed to read launch.json", e);
+			}
+		} else {
+			launch = new VsCodeLaunch();
+		}
 
 		for (RunConfigSettings settings : extension.getRunConfigs()) {
 			if (!settings.isIdeConfigGenerated()) {
 				continue;
 			}
 
-			final RunConfig runConfig = RunConfig.runConfig(project, settings);
-			final VsCodeConfiguration configuration = new VsCodeConfiguration(project, runConfig);
-
-			if (!configuration.tasksBeforeRun.isEmpty()) {
-				configuration.preLaunchTask = "generated_" + runConfig.configName;
-			}
-
-			configurationObjects.add(configuration);
-			final JsonElement configurationJson = LoomGradlePlugin.GSON.toJsonTree(configuration);
-
-			final List<JsonElement> toRemove = new LinkedList<>();
-
-			// Remove any existing with the same name
-			for (JsonElement jsonElement : configurations) {
-				if (!jsonElement.isJsonObject()) {
-					continue;
-				}
-
-				final JsonObject jsonObject = jsonElement.getAsJsonObject();
-
-				if (jsonObject.has("name")) {
-					if (jsonObject.get("name").getAsString().equalsIgnoreCase(configuration.name)) {
-						toRemove.add(jsonElement);
-					}
-				}
-			}
-
-			toRemove.forEach(configurations::remove);
-
-			configurations.add(configurationJson);
+			launch.add(project, RunConfig.runConfig(project, settings));
 			settings.makeRunDir();
 		}
 
-		final String json = LoomGradlePlugin.GSON.toJson(root);
+		String json = LoomGradlePlugin.GSON.toJson(launch);
 
-		Files.writeString(launchJson, json, StandardCharsets.UTF_8);
+		try {
+			FileUtils.writeStringToFile(launchJson, json, StandardCharsets.UTF_8);
+		} catch (IOException e) {
+			throw new RuntimeException("Failed to write launch.json", e);
+		}
 
 		VsCodeTasks tasks;
 
-		if (Files.exists(tasksJson)) {
+		if (tasksJson.exists()) {
 			try {
-				tasks = gson.fromJson(Files.readString(tasksJson, StandardCharsets.UTF_8), VsCodeTasks.class);
+				tasks = gson.fromJson(FileUtils.readFileToString(tasksJson, StandardCharsets.UTF_8), VsCodeTasks.class);
 			} catch (IOException e) {
 				throw new RuntimeException("Failed to read launch.json", e);
 			}
@@ -155,7 +126,7 @@ public class GenVsCodeProjectTask extends AbstractLoomTask {
 			tasks = new VsCodeTasks();
 		}
 
-		for (VsCodeConfiguration configuration : configurationObjects) {
+		for (VsCodeConfiguration configuration : launch.configurations) {
 			if (configuration.preLaunchTask != null && configuration.tasksBeforeRun != null) {
 				String prefix = Os.isFamily(Os.FAMILY_WINDOWS) ? "gradlew.bat" : "./gradlew";
 				tasks.add(new VsCodeTask(configuration.preLaunchTask, prefix + " " + configuration.tasksBeforeRun.stream()
@@ -170,9 +141,25 @@ public class GenVsCodeProjectTask extends AbstractLoomTask {
 			String jsonTasks = gson.toJson(tasks);
 
 			try {
-				Files.writeString(tasksJson, jsonTasks, StandardCharsets.UTF_8);
+				FileUtils.writeStringToFile(tasksJson, jsonTasks, StandardCharsets.UTF_8);
 			} catch (IOException e) {
 				throw new RuntimeException("Failed to write tasks.json", e);
+			}
+		}
+	}
+
+	private static class VsCodeLaunch {
+		public String version = "0.2.0";
+		public List<VsCodeConfiguration> configurations = new ArrayList<>();
+
+		public void add(Project project, RunConfig runConfig) {
+			if (configurations.stream().noneMatch(config -> Objects.equals(config.name, runConfig.configName))) {
+				VsCodeConfiguration configuration = new VsCodeConfiguration(project, runConfig);
+				configurations.add(configuration);
+
+				if (!configuration.tasksBeforeRun.isEmpty()) {
+					configuration.preLaunchTask = "generated_" + runConfig.configName;
+				}
 			}
 		}
 	}
@@ -200,10 +187,10 @@ public class GenVsCodeProjectTask extends AbstractLoomTask {
 		public String mainClass;
 		public String vmArgs;
 		public String args;
-		public Map<String, Object> env;
-		public String projectName;
+		public Map<String, String> env = new LinkedHashMap<>();
 		public transient List<String> tasksBeforeRun = new ArrayList<>();
 		public String preLaunchTask = null;
+		public String projectName = null;
 
 		VsCodeConfiguration(Project project, RunConfig runConfig) {
 			this.name = runConfig.configName;
@@ -211,8 +198,8 @@ public class GenVsCodeProjectTask extends AbstractLoomTask {
 			this.vmArgs = RunConfig.joinArguments(runConfig.vmArgs);
 			this.args = RunConfig.joinArguments(runConfig.programArgs);
 			this.cwd = "${workspaceFolder}/" + runConfig.runDir;
-			this.env = new HashMap<>(runConfig.environmentVariables);
-			this.projectName = runConfig.projectName;
+			this.projectName = runConfig.vscodeProjectName;
+			this.env.putAll(runConfig.envVariables);
 			this.tasksBeforeRun.addAll(runConfig.vscodeBeforeRun);
 
 			if (project.getRootProject() != project) {
